adding ForgetPassword,HomePage,SignInDesktop,SignUPDesktop in react to front

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,13 +1,163 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --colorsdark-000000100: rgba(0, 0, 0, 1);
+  --colorsdark-00000016: rgba(0, 0, 0, 0.16);
+  --colorsdark-2d-2d-2d-100: rgba(45, 45, 45, 1);
+  --colorserrorff-000010: rgba(255, 0, 0, 0.1);
+  --colorserrorff-0000100: rgba(255, 0, 0, 1);
+  --colorsgraya-3a-3a-4100: rgba(163, 163, 164, 1);
+  --colorsgraya-3a-3a-416: rgba(163, 163, 164, 0.16);
+  --colorsgraya-3a-3a-432: rgba(163, 163, 164, 0.32);
+  --colorsgrayf-7f-7f-7100: rgba(247, 247, 247, 1);
+  --colorslightffffff-100: rgba(255, 255, 255, 1);
+  --colorsprimary-50-3e-9d-10: rgba(80, 62, 157, 0.1);
+  --colorsprimary-50-3e-9d-05: rgba(80,62,157,0.05);
+  --colorsprimary-50-3e-9d-100: rgba(80, 62, 157, 1);
+  --colorssecondaryfb-6d-3a-10: rgba(251, 109, 58, 0.1);
+  --colorssecondaryfb-6d-3a-100: rgba(251, 109, 58, 1);
+  --colorssucess-41-9d-3e-10: rgba(65, 157, 62, 0.1);
+  --colorssucess-41-9d-3e-100: rgba(65, 157, 62, 1);
+  --colorstertiaryfacd-5d-10: rgba(250, 205, 93, 0.1);
+  --colorstertiaryfacd-5d-100: rgba(250, 205, 93, 1);
+  --colorstextdark-182135100: rgba(24, 33, 53, 1);
+  --colorstextdark-626264100: rgba(98, 98, 100, 1);
+  --colorstextlightf-1f-0ff-100: rgba(241, 240, 255, 1);
+  --colorstextlightf-7fafc-100: rgba(247, 250, 252, 1);
+  --text-body-large-regular-font-family: "OpenSans-Regular", Helvetica;
+  --text-body-large-regular-font-size: 20px;
+  --text-body-large-regular-font-style: normal;
+  --text-body-large-regular-font-weight: 400;
+  --text-body-large-regular-letter-spacing: 0px;
+  --text-body-large-regular-line-height: 32px;
+  --text-body-normal-regular-font-family: "OpenSans-Regular", Helvetica;
+  --text-body-normal-regular-font-size: 16px;
+  --text-body-normal-regular-font-style: normal;
+  --text-body-normal-regular-font-weight: 400;
+  --text-body-normal-regular-letter-spacing: 0px;
+  --text-body-normal-regular-line-height: 24px;
+  --text-body-small-regular-font-family: "OpenSans-Regular", Helvetica;
+  --text-body-small-regular-font-size: 14px;
+  --text-body-small-regular-font-style: normal;
+  --text-body-small-regular-font-weight: 400;
+  --text-body-small-regular-letter-spacing: 0px;
+  --text-body-small-regular-line-height: 24px;
+  --text-caption-1-regular-16pt-line-height-font-family: "OpenSans-Regular", Helvetica;
+  --text-caption-1-regular-16pt-line-height-font-size: 12px;
+  --text-caption-1-regular-16pt-line-height-font-style: normal;
+  --text-caption-1-regular-16pt-line-height-font-weight: 400;
+  --text-caption-1-regular-16pt-line-height-letter-spacing: 0px;
+  --text-caption-1-regular-16pt-line-height-line-height: 16px;
+  --text-caption-1-regular-18pt-line-height-font-family: "OpenSans-Regular", Helvetica;
+  --text-caption-1-regular-18pt-line-height-font-size: 12px;
+  --text-caption-1-regular-18pt-line-height-font-style: normal;
+  --text-caption-1-regular-18pt-line-height-font-weight: 400;
+  --text-caption-1-regular-18pt-line-height-letter-spacing: 0px;
+  --text-caption-1-regular-18pt-line-height-line-height: 18px;
+  --text-caption-1-regular-20pt-line-height-font-family: "OpenSans-Regular", Helvetica;
+  --text-caption-1-regular-20pt-line-height-font-size: 12px;
+  --text-caption-1-regular-20pt-line-height-font-style: normal;
+  --text-caption-1-regular-20pt-line-height-font-weight: 400;
+  --text-caption-1-regular-20pt-line-height-letter-spacing: 0px;
+  --text-caption-1-regular-20pt-line-height-line-height: 20px;
+  --text-caption-2-bold-all-caps-font-family: "OpenSans-Bold", Helvetica;
+  --text-caption-2-bold-all-caps-font-size: 11px;
+  --text-caption-2-bold-all-caps-font-style: normal;
+  --text-caption-2-bold-all-caps-font-weight: 700;
+  --text-caption-2-bold-all-caps-letter-spacing: 1px;
+  --text-caption-2-bold-all-caps-line-height: 16px;
+  --text-caption-2-bold-capitalized-font-family: "OpenSans-Bold", Helvetica;
+  --text-caption-2-bold-capitalized-font-size: 11px;
+  --text-caption-2-bold-capitalized-font-style: normal;
+  --text-caption-2-bold-capitalized-font-weight: 700;
+  --text-caption-2-bold-capitalized-letter-spacing: 0px;
+  --text-caption-2-bold-capitalized-line-height: 16px;
+  --text-caption-2-regular-font-family: "OpenSans-Regular", Helvetica;
+  --text-caption-2-regular-font-size: 11px;
+  --text-caption-2-regular-font-style: normal;
+  --text-caption-2-regular-font-weight: 400;
+  --text-caption-2-regular-letter-spacing: 0px;
+  --text-caption-2-regular-line-height: 16px;
+  --text-caption-2-semi-bold-font-family: "OpenSans-SemiBold", Helvetica;
+  --text-caption-2-semi-bold-font-size: 11px;
+  --text-caption-2-semi-bold-font-style: normal;
+  --text-caption-2-semi-bold-font-weight: 600;
+  --text-caption-2-semi-bold-letter-spacing: 0px;
+  --text-caption-2-semi-bold-line-height: 16px;
+  --text-h1-bold-font-family: "OpenSans-Bold", Helvetica;
+  --text-h1-bold-font-size: 32px;
+  --text-h1-bold-font-style: normal;
+  --text-h1-bold-font-weight: 700;
+  --text-h1-bold-letter-spacing: 0px;
+  --text-h1-bold-line-height: 40px;
+  --text-h2-bold-font-family: "OpenSans-Bold", Helvetica;
+  --text-h2-bold-font-size: 24px;
+  --text-h2-bold-font-style: normal;
+  --text-h2-bold-font-weight: 700;
+  --text-h2-bold-letter-spacing: 0px;
+  --text-h2-bold-line-height: 32px;
+  --text-h2-regular-font-family: "OpenSans-Regular", Helvetica;
+  --text-h2-regular-font-size: 24px;
+  --text-h2-regular-font-style: normal;
+  --text-h2-regular-font-weight: 400;
+  --text-h2-regular-letter-spacing: 0px;
+  --text-h2-regular-line-height: 32px;
+  --text-h3-bold-font-family: "OpenSans-Bold", Helvetica;
+  --text-h3-bold-font-size: 20px;
+  --text-h3-bold-font-style: normal;
+  --text-h3-bold-font-weight: 700;
+  --text-h3-bold-letter-spacing: 0px;
+  --text-h3-bold-line-height: 32px;
+  --text-h4-bold-font-family: "OpenSans-Bold", Helvetica;
+  --text-h4-bold-font-size: 16px;
+  --text-h4-bold-font-style: normal;
+  --text-h4-bold-font-weight: 700;
+  --text-h4-bold-letter-spacing: 0px;
+  --text-h4-bold-line-height: 24px;
+  --text-h4-semi-bold-font-family: "OpenSans-SemiBold", Helvetica;
+  --text-h4-semi-bold-font-size: 16px;
+  --text-h4-semi-bold-font-style: normal;
+  --text-h4-semi-bold-font-weight: 600;
+  --text-h4-semi-bold-letter-spacing: 0px;
+  --text-h4-semi-bold-line-height: 24px;
+  --text-h5-bold-font-family: "OpenSans-Bold", Helvetica;
+  --text-h5-bold-font-size: 14px;
+  --text-h5-bold-font-style: normal;
+  --text-h5-bold-font-weight: 700;
+  --text-h5-bold-letter-spacing: 0px;
+  --text-h5-bold-line-height: 24px;
+  --text-h5-bold-underline-font-family: "OpenSans-Bold", Helvetica;
+  --text-h5-bold-underline-font-size: 14px;
+  --text-h5-bold-underline-font-style: normal;
+  --text-h5-bold-underline-font-weight: 700;
+  --text-h5-bold-underline-letter-spacing: 0px;
+  --text-h5-bold-underline-line-height: 24px;
+  --text-h5-semi-bold-font-family: "OpenSans-SemiBold", Helvetica;
+  --text-h5-semi-bold-font-size: 14px;
+  --text-h5-semi-bold-font-style: normal;
+  --text-h5-semi-bold-font-weight: 600;
+  --text-h5-semi-bold-letter-spacing: 0px;
+  --text-h5-semi-bold-line-height: 24px;
+  --text-h6-bold-all-caps-font-family: "OpenSans-Bold", Helvetica;
+  --text-h6-bold-all-caps-font-size: 12px;
+  --text-h6-bold-all-caps-font-style: normal;
+  --text-h6-bold-all-caps-font-weight: 700;
+  --text-h6-bold-all-caps-letter-spacing: 1px;
+  --text-h6-bold-all-caps-line-height: 24px;
+  --text-h6-bold-capitalized-font-family: "OpenSans-Bold", Helvetica;
+  --text-h6-bold-capitalized-font-size: 12px;
+  --text-h6-bold-capitalized-font-style: normal;
+  --text-h6-bold-capitalized-font-weight: 700;
+  --text-h6-bold-capitalized-letter-spacing: 0px;
+  --text-h6-bold-capitalized-line-height: 16px;
+  --text-h6-semi-bold-font-family: "OpenSans-SemiBold", Helvetica;
+  --text-h6-semi-bold-font-size: 12px;
+  --text-h6-semi-bold-font-style: normal;
+  --text-h6-semi-bold-font-weight: 600;
+  --text-h6-semi-bold-letter-spacing: 0px;
+  --text-h6-semi-bold-line-height: 16px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+html, body, .root ,#app, #app>div {
+
+  margin: 0!important;
 }
