setting CORS_ORIGIN in backend  -- connecting frontend 'SIGN UP' to user/register/ api and createing new component Swee t Alert

--- a/front/src/components/Buttons/Primarybtns/BtnPrimary.css
+++ b/front/src/components/Buttons/Primarybtns/BtnPrimary.css
@@ -7,7 +7,10 @@
   align-items: center;
 }
 
-.buttons-primary .text {
+.btnP {
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
   color: var(--colorstextlightf-7fafc-100);
   font-family: var(--text-h3-bold-font-family);
   font-size: var(--text-h3-bold-font-size);
