updateing order and favourite page from front-end repo

--- a/front/src/Pages/Favourite/Favourite.css
+++ b/front/src/Pages/Favourite/Favourite.css
@@ -1,5 +1,11 @@
 .FavouritePage {
+  margin:12px 32px;
+  width: 100%;
+}
+
+.main_fav{
   display: flex;
   flex-direction: row;
-  height: 100%;
+  width: 100%;
 }
+
