--- a/front/src/Pages/Orders/Orders.css
+++ b/front/src/Pages/Orders/Orders.css
@@ -1,13 +1,29 @@
-.OrdersPage{
+.OrdersPage {
   display: flex;
   flex-direction: row;
   height: 100%;
 }
 
-.MainOrderScreen{
+.MainOrderScreen {
   display: flex;
   flex-direction: column;
   justify-content: start;
   width: 100%;
   margin: 12px 32px;
+}
+
+
+.UpComingOrders,.PreviousOrders {
+  display: flex;
+  flex-direction: column;
+  margin: 16px;
+
+}
+
+.UpComingOrderTitle {}
+
+.Orderrow {
+  display: flex;
+  flex-direction: row;
+
 }
