--- a/front/src/components/Cards/FoodCards/FoodCards.modules.css
+++ b/front/src/components/Cards/FoodCards/FoodCards.modules.css
@@ -8,14 +8,41 @@
 .InfoContainerFood {
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: center;
 }
+
+
 
 .InfoRowFood {
   display: flex;
   margin: 8px;
   justify-content: center;
   align-items: center;
+  color: var(--colorstextdark-626264100);
+  font-family: var(--text-caption-1-regular-18pt-line-height-font-family);
+  font-size: var(--text-caption-1-regular-20pt-line-height-font-size);
+  font-style: var(--text-caption-1-regular-18pt-line-height-font-style);
+  font-weight: var(--text-caption-1-regular-18pt-line-height-font-weight);
+  letter-spacing: var(--text-caption-1-regular-18pt-line-height-letter-spacing);
+  line-height: var(--text-caption-1-regular-18pt-line-height-line-height);
+}
+
+
+.Counter {
+  display: flex;
+  flex-direction: row;
+  border-radius: 16px;
+  padding: 8px 0px;
+  justify-content: space-between;
+}
+
+.Counter button {
+  background-color: transparent;
+  border: none;
+  margin: 0px 8px;
+}
+
+.Counter .Quantity {
   color: var(--colorstextdark-626264100);
   font-family: var(--text-caption-1-regular-18pt-line-height-font-family);
   font-size: var(--text-caption-1-regular-20pt-line-height-font-size);
