--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,3 +1,13 @@
 .Main{
   height: 100%;
 }
+
+.OverLay{
+  width: 100%;
+  height: 200%;
+  background-color: rgba(0, 0, 0, 0.16);
+  position: fixed;
+  z-index: 3;
+  overflow: hidden;
+  display: none;
+}
