--- a/front/src/components/Banners/RestaruntBanner/RestBanner.modules.css
+++ b/front/src/components/Banners/RestaruntBanner/RestBanner.modules.css
@@ -40,9 +40,8 @@
 }
 
 
-/* 
-.box .icons-icon-fill-px {
-  background-color: var(--colorslightffffff-100) !important;
+
+/* .box .icons-icon-fill-px {
   left: 992px !important;
   position: absolute !important;
   top: 32px !important;
@@ -53,3 +52,19 @@
   left: 14px !important;
   top: 14px !important;
 } */
+
+
+
+
+
+.CoverImage {
+  display: flex;
+  justify-content: end;
+  align-items: start;
+  border-radius: 16px;
+  background: url(/src/Pics/BannerPhotos/Cover.png)!important;
+  background-size: cover!important;
+  width: 100%;
+  height: 296px;
+  padding: 32px;
+}
