--- a/front/src/components/Tracking/Tracking.modules.css
+++ b/front/src/components/Tracking/Tracking.modules.css
@@ -55,7 +55,7 @@ display: none;
   height: 50%;
 }
 
-.CartCheckOutSection button {
+.TrackCheckOutSection button {
   background-color: transparent;
   border: none;
   cursor: pointer;
